<resources>
    <string name="app_name">SleepAp</string>
    <string name="infoquestion1">What is OSA?</string>
    <string name="infoanswer1">Obstructive Sleep Apnoea (OSA) occurs when a person repeatedly stops breathing during the night. The lack of oxygen arouses the person from sleep just enough for normal breathing to resume, but this often goes unnoticed by the person themselves (causing tiredness during the day).</string>
    <string name="infoquestion2">What are the symptoms of OSA?</string>
    <string name="infoanswer2">Usually the person will snore, or they will have noisy/laboured breathing interrupted by gasping/snorting each time their breathing resumes. Common symptoms include:\n\n\t&#8226;\tsleepiness during the day\n\t&#8226;\tsore/dry throat on awakening\n\t&#8226;\tpoor memory/concentration\n\t&#8226;\theadaches\n\t&#8226;\tirritability or short temper\n\t&#8226;\tanxiety\n\t&#8226;\tdepression\n\t&#8226;\treduced libido</string>
    <string name="infoquestion3">What causes OSA?</string>
    <string name="infoanswer3">OSA is caused by the collapse of the muscles and soft tissue in the back of the throat. This narrows or completely blocks the airway resulting in an interrupted supply of oxygen. The brain recognises this and wakes the person up enough for normal breathing to resume. There are a number of risk factors, including:\n\n\t&#8226;\tbeing overweight\n\t&#8226;\tbeing male\n\t&#8226;\tbeing over 50\n\t&#8226;\thaving a large neck\n\t&#8226;\talcohol/sedatives\n\t&#8226;\tsmoking\n\t&#8226;\tfamily history of OSA\n\t&#8226;\tdiabetes\n\t&#8226;\tnasal congestion</string>
    <string name="infoquestion4">How is OSA diagnosed?</string>
    <string name="infoanswer4">OSA is diagnosed with a full night\'s sleep study. You will either spend a night in hospital or you will be given a kit to take home. Both setups record a variety of physiological signals, and possibly a questionnaire. The data will be analysed by a sleep specialist who diagnoses sleep disorders.</string>
    <string name="infoquestion5">How is OSA treated?</string>
    <string name="infoanswer5">Lifestyle changes, such as losing weight, quitting smoking, and avoiding alcohol, can all help in milder cases of OSA. The most common and effective treatment is continuous positive airway pressure (CPAP). This involves wearing a mask while asleep in order to keep the airway open. Other treatment options include surgery and dental devices.</string>
    <string name="infoquestion6">How can I minimise the risk of OSA?</string>
    <string name="infoanswer6">Some lifestyle changes can help to minimise the risk of OSA, such as:\n\n\t&#8226;\tlosing weight\n\t&#8226;\tavoiding alcohol in the evening\n\t&#8226;\tquitting smoking\n\t&#8226;\tavoiding all sedatives\n\t&#8226;\tavoiding sleeping on your back</string>
    <string name="learnButtonText">About apnoea</string>
    <string name="questionnaireButtonText">Questionnaire</string>
    <string name="recordButtonText">Record</string>
    <string name="analyseButtonText">Analyse</string>
    <string name="previousButtonText">Previous results</string>
    <string name="chooseSignalsInstructions">Select sensors to record from</string>
    <string name="soundSamplesButtonText">What does OSA sound like?</string>
    <string name="sb0">The following questionnaire is a simple screening tool which assesses your risk of OSA.</string>
    <string name="sb1">Do you snore loudly?</string>
    <string name="sb2">Do you often feel tired during the day?</string>
    <string name="sb3">Has anyone seen you stop breathing during sleep?</string>
    <string name="sb4">Do you have high blood pressure?</string>
    <string name="sb5">What is your height and weight?</string>
    <string name="sb6">How old are you?</string>
    <string name="sb7">What is your neck size (circumerence)?</string>
    <string name="sb8">What is your gender?</string>
    <string name="sb9">What is your ethnicity?</string>
    <string name="ethnicity_prompt">White</string>
    <string name="heightunit_prompt">Metres</string>
    <string name="weightunit_prompt">Kilograms</string>
    <string name="necksizeunit_prompt">Inches</string>
    <string name="fileListTitle">Select a recording to analyse</string>
    <string name="noFilesFoundText">No recordings have been made. Please record data before analysing.</string>
    <string name="odiHelpMessage">Oxygen Desaturation Index (ODI) is a measure of how often the amount of oxygen in your blood dips below normal. This happens frequently to OSA patients. An ODI of 5 or above means that you are at high risk of OSA.</string>
    <string name="stopBangHelpMessage">The questionnaire is used to screen for obstructive sleep apnoea (OSA). It can be used as a first layer of screening for OSA, but by itself it is not sufficient for any diagnostic purposes. A score of 3 or above means you are at high risk of OSA.</string>
    <string name="svmHelpMessage">Your risk of having OSA is calculated by a classifier designed to determine whether your sleep data means that you are likely to have OSA or not.</string>
    <string name="cloudHelpMessage">If you wish you can upload your data for it to be analysed remotely. To do so, tap \"Perform cloud analysis\" below.</string>
    <string name="odiHelpTitle">ODI</string>
    <string name="stopBangHelpTitle">Questionnaire</string>
    <string name="svmHelpTitle">Risk</string>
    <string name="cloudHelpTitle">Cloud</string>
    <string name="settings">Settings</string>
    <string name="exit">Main menu</string>
    <string name="scoreError">Something\'s gone wrong - please fill in the questionnaire again.</string>
    <string name="scoreLow">Your answers to the questionnaire indicate that you have a low risk of OSA. You can use this app to record and analyse your sleep to confirm this result if you wish - press \'record\' to begin.</string>
    <string name="scoreHigh">Your answers to the questionnaire indicate that you have a high risk of OSA. You can use this app to record and analyse your sleep to confirm this result (just press \'record\'), or you can consult a sleep lab.</string>
    <string name="actigraphyLabel">Actigraphy &amp; Body Position</string>
    <string name="audioLabel">Microphone</string>
    <string name="ppgLabel">PPG</string>
    <string name="pulseOxLabel">Pulse oximeter</string>
    <string name="demographicsLabel">Questionnaire answers</string>
    <string name="o2satLabel">Oxygen saturation</string>
    <string name="nextButtonText">Next</string>
    <string name="dataChoiceInstructions">Choose data to use for analysis:</string>
    <string name="placementImageContentDescription">Place phone on head.</string>
    <string name="startButtonText">Start recording</string>
    <string name="analysisResults">Analysis results</string>
    <string name="odiDefaultScore">ODI:</string>
    <string name="stopBangDefaultScore">Questionnaire:</string>
    <string name="svmDefaultScore">Risk:</string>
    <string name="cloudDefaultScore">Cloud:</string>
    <string name="cloudButtonText">Perform cloud analysis</string>
    <string name="aboutApnoea">Obstructive Sleep Apnoea (OSA)</string>
    <string name="prerecordingInstructions">Please ensure you have done the following:</string>
    <string name="questionnaireJob">Completed the questionnaire</string>
    <string name="spaceJob">Allowed at least 500MB of space</string>
    <string name="batteryJob">Charged battery to at least 60%</string>
    <string name="bluetoothJob">Enabled bluetooth (semi-automatic)</string>
    <string name="bluetoothPairedJob">Device paired (semi-automatic)</string>
    <string name="silentModeJob">Enabled silent mode (automatic)</string>
    <string name="checkAllBoxes">Please check all boxes before continuing.</string>
    <string name="submitButtonText">Submit</string>
    <string name="dash">-</string>
    <string name="ok">OK</string>
    <string name="recordingsPreferenceLabel">Recordings</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="macAddressPreferenceLabel">Pulse oximeter</string>
    <string name="graphPreferenceLabel">Graphs</string>
    <string name="defaultMacAddress">00:1C:05:00:4F:43</string>
    <string name="advancedSettings">Advanced settings</string>
    <string name="stopBangResultsTitle">Advice</string>
    <string name="severitybarContentDescription">Severity bar</string>
    <string name="pickerContentDescription">Picker</string>
    <string name="mainMenuButtonText">Main menu</string>
    <string name="graphPreferenceMessage">Number of seconds to display when recording.</string>
    <string name="recordingsPreferenceMessage">Number of recordings to keep.</string>
    <string name="macAddressPreferenceMessage">MAC address of pulse oximeter. Enter the address in the format AA:AA:AA:AA:AA:AA.</string>
    <string name="notificationsPreferenceSummary">Turn notifications on or off.</string>
    <string name="notificationsPreferenceLabel">Notifications</string>
    <string name="advancedUserPreferenceSummary">Enable settings for advanced users.</string>
    <string name="advancedUserPreferenceLabel">Advanced settings</string>
    <string name="recordingDelayPreferenceSummary">Delay before recording begins (minutes): </string>
    <string name="recordingDelayPreferenceLabel">Recording delay</string>
    <string name="recordingDurationPreferenceSummary">Duration of recording (minutes): </string>
    <string name="recordingDurationPreferenceLabel">Recording duration</string>
    <string name="fileDeletionPreferenceSummary">Delete files on early exit from recording.</string>
    <string name="fileDeletionPreferenceLabel">File deletion</string>
    <string name="checkSpaceandbatteryPreferenceSummary">Require 500MB space and 60% battery to record.</string>
    <string name="checkSpaceandbatteryPreferenceLabel">Recording checks</string>
    <string name="odiThresholdPreferenceSummary">Desaturation threshold for ODI: </string>
    <string name="odiThresholdPreferenceLabel">ODI Threshold</string>
    <string name="writeLogPreferenceSummary">Log application crashes.</string>
    <string name="writeLogPreferenceLabel">Logging</string>
    <string name="fb0">Post-sleep questionnaire</string>
    <string name="fb1">Did you sleep any worse than you usually do?</string>
    <string name="fb2">What caused the most discomfort?</string>
    <string name="fb3">On what side of your body do you usually sleep?</string>
    <string name="fb4">Did you have any difficulty navigating the app interface? If so, what was difficult or confusing?</string>
    <string name="fb5">If you have additional comments, please let us know.</string>
    <string name="muchWorse">Much worse</string>
    <string name="slightlyWorse">Slightly worse</string>
    <string name="sameAsUsual">Same as usual</string>
    <string name="slightlyBetter">Slightly better</string>
    <string name="muchBetter">Much better</string>
    <string name="microphoneOnFace">Microphone on face</string>
    <string name="pulseOxOnFinger">Pulse oximeter on finger</string>
    <string name="pulseOxOnWrist">Pulse oximeter on wrist</string>
    <string name="phoneOnArm">Phone on arm</string>
    <string name="knowledgeThatSleep">Knowledge that my sleep was being recorded</string>
    <string name="nothingWasUncomfortable">Nothing was uncomfortable</string>
    <string name="myBack">My back</string>
    <string name="mySide">My side</string>
    <string name="myStomach">My stomach</string>
    <string name="iTossAndTurn">I toss and turn</string>
    <string name="nothingWasConfusing">Nothing was confusing</string>
    <string name="thePreSleepQuestionnaire">The pre-sleep questionnaire</string>
    <string name="settingUp">Setting up the equipment</string>
    <string name="startingRecording">Starting the recording</string>
    <string name="thisQuestionnaire">This post-sleep questionnaire</string>
</resources>