<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopBangResultsTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/scoreError"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/severitybar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/severitybarContentDescription"
        android:src="@drawable/severitybar" />

    <ImageView
        android:id="@+id/picker"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pickerContentDescription"
        android:src="@drawable/picker" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/recordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recordButtonText"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainMenuButtonText"
            android:textSize="20sp" >
        </Button>
    </LinearLayout>

</LinearLayout>